updated submission section

--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
 		     </h5>
           <h5 style="text-align:justify" data-wow-delay="0.2s">All submissions must be original work and must not have been previously published or being under review elsewhere.</h5>
           <h5 style="text-align:justify" data-wow-delay="0.2s">The accepted papers will be published to the ICSA 2023 Companion proceedings, and appear in IEEE Xplore Digital Library.</h5>
+          <h5 style="text-align:justify" data-wow-delay="0.2s"><b>A selection of best papers will be invited to submit extended versions for publication in a Special Section of an international Journal.</b></h5>
           <h5 style="text-align:justify" data-wow-delay="0.2s">For each accepted paper, at least one of the authors must register for the workshop, participate fully in the workshop, and present the paper at the workshop.</h5>
 		  <br>
       </div>
