--- a/index.html
+++ b/index.html
@@ -219,7 +219,23 @@
 		  <hr>
 		  <h4 style="text-align: left" data-wow-delay="0.2s"><strong>Program Committee</strong></h4>
           <br>
-          T.B.A.
+          <ul>
+            <li>-Kousar Aslam, Vrije Universiteit Amsterdam (NL)</li>
+            <li>-Luca Berardinelli, Johannes Kepler University Linz (AT)</li>
+            <li>-Johan Bergelin, Mälardalen University (SE)</li>
+            <li>-Jan Carlson, Mälardalen University (SE)</li>
+            <li>-Antonio Cicchetti, Mälardalen University (SE)</li>
+            <li>-Thijmen De Gooijer, ABB Corporate Research (SE)</li>
+            <li>-Martina De Sanctis, Gran Sasso Science Institute (ITA)</li>
+            <li>-Daniele Di Pompeo, University of L'Aquila (ITA)</li>
+            <li>-Juri Di Rocco, University of L'Aquila (ITA)</li>
+            <li>-Predrag Filipovikj, Scania Group (SE)</li>
+            <li>-Ilias Gerostathopoulos, Vrije Universiteit Amsterdam (NL)</li>
+            <li>-Raffaela Mirandola, Politecnico di Milano (ITA)</li>
+            <li>-Juha-Pekka Tolvanen, Metacase (FIN)</li>
+            <li>-Karthik Vaidhyanathan, International Institute of Information Technology, Hyderabad (India)</li>
+            <li>-Manuel Wimmer, Johannes Kepler University Linz (AT)</li>
+          </ul>
 		  <br>
 		  <hr>
 		  <h4 style="text-align: left" data-wow-delay="0.2s"><strong>Web Chair</strong> </h4><br>
