update Thijmen De Gooijer affiliation

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             <li>-Johan Bergelin, Mälardalen University (SE)</li>
             <li>-Jan Carlson, Mälardalen University (SE)</li>
             <li>-Antonio Cicchetti, Mälardalen University (SE)</li>
-            <li>-Thijmen De Gooijer, ABB Corporate Research (SE)</li>
+            <li>-Thijmen De Gooijer, Swedish Tax Agency (SE)</li>
             <li>-Martina De Sanctis, Gran Sasso Science Institute (ITA)</li>
             <li>-Daniele Di Pompeo, University of L'Aquila (ITA)</li>
             <li>-Juri Di Rocco, University of L'Aquila (ITA)</li>
