--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 		<div class="col-md-9 col-lg-4 col-xs-12 work-counter-widget text-center col-xl-4">
         <div class="counter wow fadeInRight" data-wow-delay="0.6s">
           <h5><strong style="color: #FFFFFF">Paper Submission</strong></h5>
-          <p><strong>December 09th, 2022</strong></p>
+          <p><strong>December 16th, 2022 </strong><del>December 09th, 2022</del></p>
         </div>
       </div>
 		<div class="col-md-9 col-lg-4 col-xs-12 work-counter-widget text-center col-xl-4">
