update pc members

--- a/index.html
+++ b/index.html
@@ -222,26 +222,26 @@
 		  <hr>
 		  <h4 style="text-align: left" data-wow-delay="0.2s"><strong>Program Committee</strong></h4>
           <br>
-          <p><b>T.B.A.</b></p>
-        <!--
           <ul>
-            <li>-Kousar Aslam, Vrije Universiteit Amsterdam (NL)</li>
-            <li>-Luca Berardinelli, Johannes Kepler University Linz (AT)</li>
-            <li>-Johan Bergelin, Mälardalen University (SE)</li>
-            <li>-Jan Carlson, Mälardalen University (SE)</li>
-            <li>-Antonio Cicchetti, Mälardalen University (SE)</li>
-            <li>-Thijmen De Gooijer, Swedish Tax Agency (SE)</li>
-            <li>-Martina De Sanctis, Gran Sasso Science Institute (ITA)</li>
-            <li>-Daniele Di Pompeo, University of L'Aquila (ITA)</li>
-            <li>-Juri Di Rocco, University of L'Aquila (ITA)</li>
-            <li>-Predrag Filipovikj, Scania Group (SE)</li>
-            <li>-Ilias Gerostathopoulos, Vrije Universiteit Amsterdam (NL)</li>
-            <li>-Raffaela Mirandola, Politecnico di Milano (ITA)</li>
-            <li>-Juha-Pekka Tolvanen, Metacase (FIN)</li>
-            <li>-Karthik Vaidhyanathan, International Institute of Information Technology, Hyderabad (India)</li>
-            <li>-Manuel Wimmer, Johannes Kepler University Linz (AT)</li>
-          </ul>
-        -->
+            <li>- Imad Berrouyne, Mälardalen University (SE)</li>
+            <li>- Romina Eramo, University of Teramo (IT)</li>
+            <li>- Luca Berardinelli, Johannes Kepler University Linz (AT)</li>
+            <li>- Juri Di Rocco, University of L'Aquila (IT)</li>
+            <li>- Juergen Dingel, Queen's University (CA)</li>
+            <li>- Manuel Wimmer, Johannes Kepler University Linz (AT)</li>
+            <li>- Juha-Pekka Tolvanen, MetaCase (FI)</li>
+            <li>- Antonio Cicchetti, Mälardalen University (SE)</li>
+            <li>- Daniele Di Pompeo, University of L'Aquila (IT)</li>
+            <li>- Bran Selic, Malina Software Corp. (CA)</li>
+            <li>- Martina De Sanctis, Gran Sasso Science Institute (IT)</li>
+            <li>- Ilias Gerostathopoulos, Vrije Universiteit Amsterdam (NL)</li>
+            <li>- Jan Carlson, Mälardalen University (SE)</li>
+            <li>- Elena Lisova, Mälardalen University (SE), VCE (SE)</li>
+            <li>- Jakob Pietron, Ulm University (DE)</li>
+            <li>- Loek Cleophas, Eindhoven University of Technology (TU/e) and Stellenbosch University (SU) (NL/ZA)</li>
+            <li>- Judith Michael, RWTH Aachen University (DE)</li>
+            <li>- Raffaela Groner, Chalmers | University of Gothenburg (SE)</li>          </ul>
+
 		  <br>
 		  <hr>
           <h4 style="text-align: left" data-wow-delay="0.2s"><strong>Steering Committee</strong> </h4><br>
