--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 		<div class="col-md-9 col-lg-4 col-xs-12 work-counter-widget text-center col-xl-4">
         <div class="counter wow fadeInRight" data-wow-delay="0.6s">
           <h5><strong style="color: #FFFFFF">Paper Submission</strong></h5>
-          <p><strong>December 20<sup>th</sup>, 2024</strong></p>
+          <p><strong><del>December 20<sup>th</sup>, 2024</del>January 3<sup>rd</sup>, 2025</strong></p>
         </div>
       </div>
 		<div class="col-md-9 col-lg-4 col-xs-12 work-counter-widget text-center col-xl-4">
