--- a/index.html
+++ b/index.html
@@ -135,24 +135,30 @@
           </div>
         </div>
       </div>
-		<div class="col-md-9 col-lg-4 col-xs-12 work-counter-widget text-center col-xl-4">
+      <div class="col-md-9 col-lg-3 col-xs-12 work-counter-widget text-center col-xl-3">
+        <div class="counter wow fadeInRight" data-wow-delay="0.6s">
+          <h5><strong style="color: #FFFFFF">Abstract Submission</strong></h5>
+          <p><strong>December 20<sup>th</sup>, 2024</strong></p>
+        </div>
+      </div>
+      <div class="col-md-9 col-lg-3 col-xs-12 work-counter-widget text-center col-xl-3">
         <div class="counter wow fadeInRight" data-wow-delay="0.6s">
           <h5><strong style="color: #FFFFFF">Paper Submission</strong></h5>
           <p><strong><del>December 20<sup>th</sup>, 2024</del>January 3<sup>rd</sup>, 2025</strong></p>
         </div>
       </div>
-		<div class="col-md-9 col-lg-4 col-xs-12 work-counter-widget text-center col-xl-4">
-        <div class="counter wow fadeInRight" data-wow-delay="0.6s">
-			<h5><strong style="color: #FFFFFF">Notification to authors</strong></h5>
-          <p><strong>January 20<sup>th</sup>, 2025</strong></p>
-        </div>
+      <div class="col-md-9 col-lg-3 col-xs-12 work-counter-widget text-center col-xl-3">
+      <div class="counter wow fadeInRight" data-wow-delay="0.6s">
+          <h5><strong style="color: #FFFFFF">Notification to authors</strong></h5>
+        <p><strong>January 20<sup>th</sup>, 2025</strong></p>
       </div>
-      <div class="col-md-9 col-lg-4 col-xs-12 work-counter-widget text-center col-xl-4">
-        <div class="counter wow fadeInRight" data-wow-delay="0.6s">
-			<h5><strong style="color: #FFFFFF">Camera Ready</strong></h5>
-          <p><strong>January 27<sup>th</sup>, 2025</strong></p>
-        </div>
+    </div>
+    <div class="col-md-9 col-lg-3 col-xs-12 work-counter-widget text-center col-xl-3">
+      <div class="counter wow fadeInRight" data-wow-delay="0.6s">
+          <h5><strong style="color: #FFFFFF">Camera Ready</strong></h5>
+        <p><strong>January 27<sup>th</sup>, 2025</strong></p>
       </div>
+    </div>
     </div>
   </div>
 </section>
@@ -178,6 +184,7 @@
           <h5 style="text-align:justify" data-wow-delay="0.2s">All submissions must be original work and must not have been previously published or being under review elsewhere.</h5>
           <h5 style="text-align:justify" data-wow-delay="0.2s">The accepted papers will be published to the ICSA 2025 Companion proceedings, and appear in IEEE Xplore Digital Library.</h5>
           <h5 style="text-align:justify" data-wow-delay="0.2s">For each accepted paper, at least one of the authors must register for the workshop, participate fully in the workshop, and present the paper at the workshop.</h5>
+          <h5 style="text-align:justify" data-wow-delay="0.2s"><strong>Selected best papers will be nominated for submitting an extended version of their work to the Journal of Software Engineering for Autonomous Systems.</strong></h5>
 		  <br>
       </div>
     </div>
