add the journal url

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
           <h5 style="text-align:justify" data-wow-delay="0.2s">All submissions must be original work and must not have been previously published or being under review elsewhere.</h5>
           <h5 style="text-align:justify" data-wow-delay="0.2s">The accepted papers will be published to the ICSA 2025 Companion proceedings, and appear in IEEE Xplore Digital Library.</h5>
           <h5 style="text-align:justify" data-wow-delay="0.2s">For each accepted paper, at least one of the authors must register for the workshop, participate fully in the workshop, and present the paper at the workshop.</h5>
-          <h5 style="text-align:justify" data-wow-delay="0.2s"><strong>Selected best papers will be nominated for submitting an extended version of their work to the Journal of Software Engineering for Autonomous Systems.</strong></h5>
+          <h5 style="text-align:justify" data-wow-delay="0.2s"><strong>Selected best papers will be nominated for submitting an extended version of their work to the <a href="https://www.athena-publishing.com/journals/jseas" target="_blank">Journal of Software Engineering for Autonomous Systems</a> .</strong></h5>
 		  <br>
       </div>
     </div>
