update submissions date

--- a/index.html
+++ b/index.html
@@ -138,13 +138,13 @@
       <div class="col-md-9 col-lg-3 col-xs-12 work-counter-widget text-center col-xl-3">
         <div class="counter wow fadeInRight" data-wow-delay="0.6s">
           <h5><strong style="color: #FFFFFF">Abstract Submission</strong></h5>
-          <p><strong>December 20<sup>th</sup>, 2024</strong></p>
+          <p><strong>December 23<sup>rd</sup>, 2024</strong></p>
         </div>
       </div>
       <div class="col-md-9 col-lg-3 col-xs-12 work-counter-widget text-center col-xl-3">
         <div class="counter wow fadeInRight" data-wow-delay="0.6s">
           <h5><strong style="color: #FFFFFF">Paper Submission</strong></h5>
-          <p><strong><del>December 20<sup>th</sup>, 2024</del>January 3<sup>rd</sup>, 2025</strong></p>
+          <p><strong><del>December 20<sup>th</sup>, 2024</del><br/>January 4<sup>th</sup>, 2025</strong></p>
         </div>
       </div>
       <div class="col-md-9 col-lg-3 col-xs-12 work-counter-widget text-center col-xl-3">
@@ -172,7 +172,7 @@
         <div class="section-title-header text-center">
           <h1 class="section-title wow fadeInUp" data-wow-delay="0.2s">Submission</h1>      
         </div>
-		  <h5 style="text-align: left" data-wow-delay="0.2s">We solicit full papers (no more than 8 pages, including references) and short papers (no more than 4 pages including references) of the following types:</h5>
+		  <h5 style="text-align: left" data-wow-delay="0.2s">We solicit full papers (no more than <strong>10 pages</strong>, including references) and short papers (no more than <strong>6</strong> pages including references) of the following types:</h5>
           <h5 style="text-align:justify" data-wow-delay="0.2s"><strong>- Technical papers</strong> presenting novel contributions relevant to the workshop topics</h5>
 		  <h5 style="text-align:justify" data-wow-delay="0.2s"><strong>- Work in progress papers</strong> presenting preliminary results in applying MDE to software architecture</h5>
 		  <h5 style="text-align:justify" data-wow-delay="0.2s"><strong>- Visionary papers</strong> on open problems and future research challenges</h5>
