--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <div class="carousel-item active"> <img class="w-100" src="assets/img/slider/odense.jpg" alt="First slide">
         <div class="carousel-caption d-md-block">       
           <h1 class="wow fadeInDown heading" data-wow-delay=".4s">4<sup>th</sup> International Workshop on Model-Driven Engineering for Software Architecture (MDE4SA 2025)</h1>
-            <h2 class="wow fadeInDown" data-wow-delay=".4s">31 March - 4 April 2025, Odense, Denmark</h2>
+            <h2 class="wow fadeInDown" data-wow-delay=".4s">1 April 2025, Odense, Denmark</h2>
 		    <h2 class="wow fadeInDown" data-wow-delay="0.2s"><strong>Co-located with 22<sup>nd</sup> <a href="https://conf.researchr.org/home/icsa-2025" target="_blank">IEEE International Conference on Software Architecture (ICSA 2025)</a></strong></h2>
         </div>
       </div>
@@ -200,7 +200,27 @@
       <div class="col-12">
         <div class="section-title-header text-center">
           <h1 class="section-title wow fadeInUp" data-wow-delay="0.2s">Program</h1>
-          <h5><strong>T.B.A.</strong></h5>
+          <h5><strong>Tuesday 1th April, 2025</strong></h5>
+          <h5 style="text-align: left">09:00 - 09:05: Opening by Francesco Basciani, Gran Sasso Science Institute</h5>
+          <h5 style="text-align: left">09:05 - 10:00: Keynote by <strong>Prof. Alessio Bucaioni</strong> from M&auml;lardalen University
+          </h5>
+          <h5 style="text-align: left">
+            <strong>Title:</strong> Lessons from Bridging Software Architecture and Model-Driven Engineering for Conformance, Automation, and Architecture as Code
+            <br>
+            <strong>Abstract:</strong> Over the years, research and practice have explored the intersection of software architecture and model-driven engineering, leading to both successes and persistent challenges. This keynote reflects on key lessons learned from bridging SA and MDE, focusing on conformance checking, automation, and the emerging paradigm of Architecture as Code. We will discuss what has worked—such as the benefits of model-based architectural analysis, automation of design verification, and tooling advancements—as well as what has not, including challenges in industry adoption, scalability, and integration with agile development practices. Finally, we will explore what’s next: how emerging technologies, such as AI-driven modelling assistance and continuous conformance monitoring, can further strengthen the interplay between software architecture and model-driven engineering.
+          </h5>
+          <h5 style="text-align: left">10:00 - 10:30: Coffee Break</h5>
+          <h5 style="text-align: left">10:30 - 11:30: Session II (Chair Francesco Basciani, Gran Sasso Science Institute)</h5>
+          <h5 style="text-align: left">10:30 - 10:50: <strong>Reimplementing the Structurizr Software Architecture Modelling Language as a Hybrid DSL</strong> <br>Authors: Ionut Predoaia, Dimitris Kolovos, and Antonio García-Domínguez</h5>
+          <h5 style="text-align: left">10:50 - 11:10: <strong>Detecting Encryption Vulnerabilities By Coupling Architectural Analyses and Source Code Analyses</strong> <br>Authors: Frederik Reiche and Robert Heinrich</h5>
+          <h5 style="text-align: left">11:10 - 11:30: <strong>A Model-Driven Platform for Software Applications on Heterogeneous Computing Environments</strong> <br>Authors: Simone Bauco, Guglielmo De Angelis, Romolo Marotta, and Alessandro Pellegrini</h5>
+          <h5 style="text-align: left">11:30 - 12:30: Lunch at Restaurant</h5>
+          <h5 style="text-align: left">12:30 - 13:30: Session III (Chair Francesco Basciani, Gran Sasso Science Institute)</h5>
+          <h5 style="text-align: left">12:30 - 12:50: <strong>LLM-Based Recommender Systems for Violation Resolutions in Continuous Architectural Conformance</strong> <br>Authors: Riccardo Rubei, Amleto Di Salle, and Alessio Bucaioni</h5>
+          <h5 style="text-align: left">12:50 - 13:10: <strong>Harnessing ChatGPT for Model Transformation in Software Architecture: From UML State Diagrams to Rebeca Models for Formal Verification</strong> <br>Authors: Zahra Moezkarimi, Kevin Eriksson, Albin Alm Johansson, Alessio Bucaioni, and Marjan Sirjani</h5>
+          <h5 style="text-align: left">13:10 - 13:30: <strong>Framework for Transforming Compact Surface Languages into Augmented EAST-ADL Models</strong> <br>Authors: Imad Berrouyne, Alessio Bucaioni, Federico Ciccozzi, Henrik Lönn, and Muhammad Waseem Anwar</h5>
+          <h5 style="text-align: left">13:30 - 13:50: <strong>DATCloud: A Model-Driven Framework for Multi-Layered Data-Intensive Architectures</strong> <br>Authors: Moamin Abughazala and Henry Muccini</h5>
+          <h5 style="text-align: left">13:50 - 14:00: Wrap-up and closing by Francesco Basciani, Gran Sasso Science Institute</h5>
         </div>
       </div>
     </div>
