--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         </div>
 		  <h4 style="text-align: left" data-wow-delay="0.2s"><strong>Organizers</strong> </h4><br>
 		  <h5 style="text-align: left" data-wow-delay="0.2s"><strong>Enxhi Ferko</strong> <br></h5>
-          <p>Academy of Innovation, Design and Engineering, M&auml;lardalen University, V&auml;ster&aring;s (Sweden) <br></p>
+          <p>Jotne Connect, V&auml;ster&aring;s (Sweden) <br></p>
 		  <br>
           <h5 style="text-align: left" data-wow-delay="0.2s"><strong>Malvina Latifaj</strong> <br></h5>
           <p>Academy of Innovation, Design and Engineering, M&auml;lardalen University, V&auml;ster&aring;s (Sweden) <br></p>
