--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 		  <h5 style="text-align:justify" data-wow-delay="0.2s"><strong>- Experience papers</strong> describing the use of MDE in software architecture within industrial context</h5>
 		  <h5 style="text-align:justify" data-wow-delay="0.2s">Contributions must be written in English, adhere to the
 		    <a href="https://www.ieee.org/conferences/publishing/templates.html" target="_blank"> IEEE Computer Science proceedings format</a>, and be submitted
-		    through <a href="https://easychair.org/conferences/?conf=icsa2025" target="_blank">EasyChair</a>
+		    through <a href="#" target="_blank">EasyChair</a>
 		  </h5>
           <h5 style="text-align:justify" data-wow-delay="0.2s">All submissions must be original work and must not have been previously published or being under review elsewhere. Note that changes to the list of authors workshop papers are not permitted after submission.</h5>
           <h5 style="text-align:justify" data-wow-delay="0.2s">The accepted papers will be published to the ICSA 2026 Companion proceedings, and appear in IEEE Xplore Digital Library.</h5>
