update easychair link

--- a/index.html
+++ b/index.html
@@ -181,10 +181,8 @@
 		  <h5 style="text-align:justify" data-wow-delay="0.2s"><strong>- Work in progress papers</strong> presenting preliminary results in applying MDE to software architecture</h5>
 		  <h5 style="text-align:justify" data-wow-delay="0.2s"><strong>- Visionary papers</strong> on open problems and future research challenges</h5>
 		  <h5 style="text-align:justify" data-wow-delay="0.2s"><strong>- Experience papers</strong> describing the use of MDE in software architecture within industrial context</h5>
-		  <h5 style="text-align:justify" data-wow-delay="0.2s">Contributions must be written in English, adhere to the
-		    <a href="https://www.ieee.org/conferences/publishing/templates.html" target="_blank"> IEEE Computer Science proceedings format</a>, and be submitted
-		    through <a href="#" target="_blank">EasyChair</a>
-		  </h5>
+		  <h5 style="text-align:justify" data-wow-delay="0.2s">Contributions must be written in English, adhere to the <a href="https://www.ieee.org/conferences/publishing/templates.html" target="_blank"> IEEE Computer Science proceedings format</a>.</h5>
+          <h5 style="text-align:justify" data-wow-delay="0.2s">All papers must be submitted via <a href="https://easychair.org/conferences?conf=icsa2026" target="_blank">EasyChair</a>. To submit, click on the <em>Submit Paper</em> button, select <em>New Submission</em>, and choose the track <em>5th International Workshop on Model-Driven Engineering for Software Architecture</em></h5>
           <h5 style="text-align:justify" data-wow-delay="0.2s">All submissions must be original work and must not have been previously published or being under review elsewhere. Note that changes to the list of authors workshop papers are not permitted after submission.</h5>
           <h5 style="text-align:justify" data-wow-delay="0.2s">The accepted papers will be published to the ICSA 2026 Companion proceedings, and appear in IEEE Xplore Digital Library.</h5>
           <h5 style="text-align:justify" data-wow-delay="0.2s"><b>Note that changes to the list of authors of accepted papers are not allowed after submission.</b></h5>
