add the PC members

--- a/index.html
+++ b/index.html
@@ -230,7 +230,29 @@
 		  <hr>
 		  <h4 style="text-align: left" data-wow-delay="0.2s"><strong>Program Committee</strong></h4>
           <br>
-          <p>T.B.A</p>
+          <ul>
+              <li>- Jo Atlee, University of Waterloo</li>
+              <li>- Luca Berardinelli, Johannes Kepler University Linz</li>
+              <li>- Jan Carlson, Mälardalen University</li>
+              <li>- Antonio Cicchetti, Mälardalen University</li>
+              <li>- Loek Cleophas, TU Eindhoven</li>
+              <li>- Juergen Dingel, Queen’s University</li>
+              <li>- Daniele Di Pompeo, University of L'Aquila</li>
+              <li>- Juri Di Rocco, University of L'Aquila</li>
+              <li>- Romina Eramo, University of Teramo</li>
+              <li>- Raffaela Gröner, University of Gothenburg</li>
+              <li>- Gerardo Iuliano, University of Salerno</li>
+              <li>- Robbert Jongeling, York University</li>
+              <li>- Rick Kazman, University of Hawaii</li>
+              <li>- Maged Khalil, Continental</li>
+              <li>- Stefan Kugele, Technical University of Munich</li>
+              <li>- Judith Michael, University of Regensburg</li>
+              <li>- Alessandra Somma, University of Naples Federico II</li>
+              <li>- Matthias Tichy, Universität Ulm</li>
+              <li>- Juha-Pekka Tolvanen, MetaCase</li>
+              <li>- Manuel Wimmer, Johannes Kepler University Linz</li>
+              <li>- Andreas Wortmann, University of Stuttgart</li>
+          </ul>
 		  <br>
 		  <hr>
           <h4 style="text-align: left" data-wow-delay="0.2s"><strong>Steering Committee</strong> </h4><br>
